RESOLVED FIXED283468
AX: A new AccessibilityMenuListPopup is created and never cleaned up for every clearChildren-addChildren cycle of AccessibilityMenuList, causing a memory leak
https://bugs.webkit.org/show_bug.cgi?id=283468
Summary AX: A new AccessibilityMenuListPopup is created and never cleaned up for ever...
Tyler Wilcock
Reported 2024-11-20 22:05:09 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-20 22:05:19 PST
Tyler Wilcock
Comment 2 2024-11-20 22:18:52 PST
EWS
Comment 3 2024-11-22 11:37:37 PST
Committed 286973@main (291a726050b8): <https://commits.webkit.org/286973@main> Reviewed commits have been landed. Closing PR #36936 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.