Source/WebCore/accessibility/AccessibilityMenuList.cpp
@@ -33,14 +33,19 @@
 
 namespace WebCore {
 
-AccessibilityMenuList::AccessibilityMenuList(AXID axID, RenderMenuList& renderer)
+AccessibilityMenuList::AccessibilityMenuList(AXID axID, RenderMenuList& renderer, AXObjectCache& cache)
     : AccessibilityRenderObject(axID, renderer)
+    , m_popup(downcast<AccessibilityMenuListPopup>(*cache.create(AccessibilityRole::MenuListPopup)))
 {
+    m_popup->setParent(this);
+
+    addChild(m_popup.ptr());
+    m_childrenInitialized = true;
 }
 
-Ref<AccessibilityMenuList> AccessibilityMenuList::create(AXID axID, RenderMenuList& renderer)
+Ref<AccessibilityMenuList> AccessibilityMenuList::create(AXID axID, RenderMenuList& renderer, AXObjectCache& cache)
 {
-    return adoptRef(*new AccessibilityMenuList(axID, renderer));
+    return adoptRef(*new AccessibilityMenuList(axID, renderer, cache));
 }
 
 bool AccessibilityMenuList::press()
@@ -49,7 +54,7 @@ bool AccessibilityMenuList::press()
         return false;
 
 #if !PLATFORM(IOS_FAMILY)
-    auto element = this->element();
+    RefPtr element = this->element();
     AXObjectCache::AXNotification notification = AXObjectCache::AXPressDidFail;
     if (CheckedPtr menuList = dynamicDowncast<RenderMenuList>(renderer()); menuList && element && !element->isDisabledFormControl()) {
         if (menuList->popupIsVisible())
@@ -58,39 +63,34 @@ bool AccessibilityMenuList::press()
             menuList->showPopup();
         notification = AXObjectCache::AXPressDidSucceed;
     }
-    if (auto cache = axObjectCache())
-        cache->postNotification(element, notification);
+    if (CheckedPtr cache = axObjectCache())
+        cache->postNotification(element.get(), notification);
     return true;
 #endif
     return false;
 }
 
+void AccessibilityMenuList::updateChildrenIfNecessary()
+{
+    // Typically for AccessibilityNodeObject subclasses, updateChildrenIfNecessary() is what
+    // calls addChildren(), which in turn passes m_subtreeDirty down the tree as objects are inserted.
+    // However, we purposely never allow our children to be cleared or become unitialized, which
+    // by the definition of the AccessibilityNodeObject::updateChildrenIfNecessary() means addChildren()
+    // will never be called. (We add our only child, m_popup, once in the constructor).
+    //
+    // Despite this, we still want to pass down the m_subtreeDirty flag if we have it set, so do that here.
+    if (m_subtreeDirty)
+        m_popup->setNeedsToUpdateSubtree();
+
+    m_subtreeDirty = false;
+}
+
 void AccessibilityMenuList::addChildren()
 {
-    auto clearDirtySubtree = makeScopeExit([&] {
-        m_subtreeDirty = false;
-    });
-
-    if (!m_renderer)
-        return;
-    
-    AXObjectCache* cache = axObjectCache();
-    if (!cache)
-        return;
-    
-    auto list = cache->create(AccessibilityRole::MenuListPopup);
-    if (!list)
-        return;
-
-    downcast<AccessibilityMockObject>(*list).setParent(this);
-    if (list->isIgnored()) {
-        cache->remove(list->objectID());
-        return;
-    }
-
-    m_childrenInitialized = true;
-    addChild(list);
-    list->addChildren();
+    // This class sets its children once in the constructor, and should never
+    // have dirty or uninitialized children afterwards.
+    ASSERT(m_childrenInitialized);
+    ASSERT(!m_childrenDirty);
 }
 
 bool AccessibilityMenuList::isCollapsed() const
@@ -110,15 +110,15 @@ bool AccessibilityMenuList::isCollapsed() const
 
 bool AccessibilityMenuList::canSetFocusAttribute() const
 {
-    if (!node())
-        return false;
-
-    return !downcast<Element>(*node()).isDisabledFormControl();
+    RefPtr element = this->element();
+    return element && !element->isDisabledFormControl();
 }
 
 void AccessibilityMenuList::didUpdateActiveOption(int optionIndex)
 {
-    Ref<Document> document(m_renderer->document());
+    RefPtr document = m_renderer ? &m_renderer->document() : nullptr;
+    if (!document)
+        return;
 
     const auto& childObjects = unignoredChildren();
     if (!childObjects.isEmpty()) {
@@ -133,11 +133,11 @@ void AccessibilityMenuList::didUpdateActiveOption(int optionIndex)
         // You can reproduce the issue in the GTK+ port by removing this check and running
         // accessibility/insert-selected-option-into-select-causes-crash.html (will crash).
         int popupChildrenSize = static_cast<int>(childObjects[0]->unignoredChildren().size());
-        if (auto* accessibilityMenuListPopup = dynamicDowncast<AccessibilityMenuListPopup>(*childObjects[0]); accessibilityMenuListPopup && optionIndex >= 0 && optionIndex < popupChildrenSize)
+        if (RefPtr accessibilityMenuListPopup = dynamicDowncast<AccessibilityMenuListPopup>(*childObjects[0]); accessibilityMenuListPopup && optionIndex >= 0 && optionIndex < popupChildrenSize)
             accessibilityMenuListPopup->didUpdateActiveOption(optionIndex);
     }
 
-    if (auto* cache = document->axObjectCache())
+    if (CheckedPtr cache = document->axObjectCache())
         cache->deferMenuListValueChange(element());
 }
 
